--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
 
 <body>
 
-  <video autoplay muted loop id="video-fondo">
-    <source src="./assets/img/background2.mp4" type="video/mp4">
-  </video>
+  <!-- <video autoplay muted loop id="video-fondo">
+    <source src="./assets/img/background-test.mp4" type="video/mp4">
+  </video> -->
 
   <app-root></app-root>
 
