--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Lara Aguerre</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!--google fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,14 +23,16 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+
+
   <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
 
-  <!-- <video autoplay muted loop id="video-fondo">
-    <source src="./assets/img/background-test.mp4" type="video/mp4">
-  </video> -->
 
   <app-root></app-root>
 
