--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,34 @@
 
 <body>
 
-
   <app-root></app-root>
+  <!-- 
+  <div class="background">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </div> -->
+
+  <div class="shapedividers_com-3362"></div>
+
+
 
 
   <!--Bootstrap-->
